Implement responsive design

--- a/src/main/resources/static/default/css/dashboard/dashboard.css
+++ b/src/main/resources/static/default/css/dashboard/dashboard.css
@@ -1,5 +1,9 @@
 @CHARSET "ISO-8859-1";
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+	display: none !important;
+}
+
 .mainbox {
 	margin-top: 50px;
 }
