--- a/src/main/resources/templates/default/dashboard.html
+++ b/src/main/resources/templates/default/dashboard.html
@@ -3,12 +3,15 @@
 		xmlns:th="http://www.thymeleaf.org"
 		xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<title>Dashboard</title>
 		<link rel="stylesheet" type="text/css" th:href="@{/default/css/vendor/bootstrap/bootstrap.css}" />
 		<link rel="stylesheet" type="text/css" th:href="@{/default/css/dashboard/dashboard.css}" />
 	</head>
 	<body data-ng-app="dashboard">
-		<div data-ui-view=""></div>
+		<div data-ui-view="" class="container"></div>
 
 		<div class="footer">
 			<div class="container">
