--- a/src/main/resources/templates/prod/dashboard.html
+++ b/src/main/resources/templates/prod/dashboard.html
@@ -3,12 +3,20 @@
 		xmlns:th="http://www.thymeleaf.org"
 		xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<title>Dashboard</title>
 		<link rel="stylesheet" type="text/css" th:href="@{/prod/css/vendor.min.css}" />
 		<link rel="stylesheet" type="text/css" th:href="@{/prod/css/dashboard.min.css}" />
 	</head>
 	<body data-ng-app="dashboard">
-		<div data-ui-view=""></div>
+		<div data-ui-view="" class="container"></div>
+		<div class="footer">
+			<div class="container">
+				<p>&copy; No Name. Current env: <span th:text="${env}">Environment</span></p>
+			</div>
+		</div>
 		<script type="text/javascript" th:src="@{/prod/js/vendor.min.js}"></script>
 		<script type="text/javascript" th:src="@{/prod/js/dashboard.min.js}"></script>
 	</body>
